--- a/src/main/resources/public/errors/403.html
+++ b/src/main/resources/public/errors/403.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Refresh" content="5; url=/logout">
+<meta http-equiv="Refresh" content="5; url=/b8a3/logout">
 <title>Access is Denied</title>
 <style>
 ::-moz-selection {
