--- a/src/main/resources/public/errors/500.html
+++ b/src/main/resources/public/errors/500.html
@@ -72,7 +72,7 @@ ul {
 		<p>Sorry, but there was an error with the server that prevented
 			this page from being displayed.|对不起，但有一个错误，服务器无法显示此页的显示。</p>
 		<p>
-			<a href="/">HomePage|主页</a>
+			<a href="/b8a3/">HomePage|主页</a>
 		</p>
 	</div>
 </body>
