--- a/src/main/resources/public/errors/404.html
+++ b/src/main/resources/public/errors/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Refresh" content="5; url=/"> 
+    <meta http-equiv="Refresh" content="5; url=/b8a3/">
     <title>Page Not Found</title>
     <style>
         ::-moz-selection {
